apps/miniflux/miniflux-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: toolbox
  labels:
    app.kubernetes.io/name: miniflux
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miniflux
    spec:
      securityContext:
        fsGroup: 1000
      dnsPolicy: ClusterFirst
      containers:
        - name: miniflux
          image: "ghcr.io/miniflux/miniflux@sha256:49d7b60987616387c306a8023087b31f2c9b7b21288b523026cb04058e8b6dbb" # 2.3.3
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 75m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
