apps/miniflux/miniflux-service.yml
apiVersion: v1
kind: Service
metadata:
  name: miniflux-service
  namespace: toolbox
  labels:
    app.kubernetes.io/name: miniflux
spec:
  selector:
    app.kubernetes.io/name: miniflux
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
